# mountain_project

./: .gitignore  README.md
FingerprintAnalysis/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.doxygen  Filter.cpp  Image.cpp  Image.h  Makefile  MotionModel.cpp  Pressure.cpp  Prog  Register.cpp  SymmetryTransformations.cpp  cmake_install.cmake  main.cpp  utils.cpp  utils.h
LossFunctionAnalysis/: data.txt  data_2.txt  lossfunction.py  plot.py
data/input_images/: grande_sassiere.jpg:Zone.Identifier  rachais.jpg:Zone.Identifier  rachais_2.jpg:Zone.Identifier
docs/html/: _image_8h_source.html  annotated.html  class_image-members.html  class_image.html  classes.html  files.html  functions.html  functions_func.html  index.html  struct_window-members.html  struct_window.html  utils_8h_source.html
docs/html/search/: all_1.js  all_2.js  classes_1.js  functions_0.js  searchdata.js
docs/latex/: annotated.tex  class_image.tex  refman.tex  struct_window.tex
notebooks/: direct_sin_sum_approache.ipynb  image_processing_experimentations.ipynb  lim_griffin_approach.ipynb  sound_processing_experimentations.ipynb
